added class; started building html pgs

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,18 @@
-THE REGISTRATION PAGEE
+THE REGISTRATION PAGE
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashcardio</title>
+    <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
 </head>
-<body>
+<body class="sans-serif pv3 ph2">
+    <div class="mw9 center">
     {% block content %}
     {% endblock %}
+    </div>
 </body>
 </html>
