homepage not loading

--- a/templates/list_decks.html
+++ b/templates/list_decks.html
@@ -7,7 +7,7 @@
 
 <div class="flex flex-wrap">
     {% for deck in decks %}
-    <div class="">
+    <div class="tj">
         <h2><a href="{% url 'show_deck' pk=deck.pk %}"></a></h2>
         
     
