--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,24 @@ THE REGISTRATION PAGE
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcardio</title>
+    {% block meta %}{% endblock %}
+    <title>{% block title %}Flashcardio{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 </head>
-<body class="sans-serif pv3 ph2">
-    <div class="mw9 center">
+<body class="sans-serif">
+  <div class="">
+    <div class="">
+      <h1><a class="" href="{% url 'homepage' %}">Flashcards</a></h1>
+      {% if user.is_authenticated %}
+      <div>
+        Hello, {{ user.username }}!
+        <a href="{% url 'auth_logout' %}">Logout</a>
+      </div>
+      {% endif %}
+    </div>
     {% block content %}
     {% endblock %}
-    </div>
+  </div>
 </body>
 </html>
