--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-THE REGISTRATION PAGE
 {% load static %}
 
 <!DOCTYPE html>
@@ -7,13 +6,22 @@ THE REGISTRATION PAGE
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block meta %}{% endblock %}
-    <title>{% block title %}Flashcardio{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 </head>
 <body class="sans-serif">
-  <div class="">
-    <div class="">
+  <div class="mw8 center ph3 pv4">
+      <div class="bg-washed-green">
+       <h1><a class="no-underline" href="{% url 'homepage' %}">Flashcard Decks</a></h1>
+          {% if user.is_authenticated %}
+          <div>
+            Hello, {{ user.username }}!    
+            <a href="{% url 'auth_logout' %}">Logout</a>
+          </div>
+      </div>
+      {% endif %}
+    <!-- <div class="">
       <h1><a class="" href="{% url 'homepage' %}">Flashcards</a></h1>
       {% if user.is_authenticated %}
       <div>
@@ -21,7 +29,7 @@ THE REGISTRATION PAGE
         <a href="{% url 'auth_logout' %}">Logout</a>
       </div>
       {% endif %}
-    </div>
+    </div> -->
     {% block content %}
     {% endblock %}
   </div>
