--- a/templates/decks/deck_list.html
+++ b/templates/decks/deck_list.html
@@ -1,12 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Your decks</h2>
+<h2>
+    <a href="{% url 'add_deck' %}">add a new deck</a>
+</h2>
 
-<ul<>
+<h2>your decks</h2>
+<ul>
     {% for deck in decks %}
-    <li><a href="{% url 'deck_detail' deck_pk=deck.pk %}"></a>{{ deck.title }}</li>
-    <!-- <li>{{ recipe.title }}</li> -->
+    <li>
+        <a href="{% url 'deck_detail' deck_pk=deck.pk %}"></a>{{ deck.deck_name }}<br>
+        <button type="submit"><a class="" href="{% url 'delete_deck' deck_pk=deck.pk %}">delete this deck</a></button>
+        <form action="{% url 'edit_deck' deck_pk=deck.pk %}" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div>
+                <button type="submit">update this deck</button>
+            </div>
+        </form>
+    </li> <br>
     {% endfor %}
 </ul>
     
