--- a/templates/decks/add_deck.html
+++ b/templates/decks/add_deck.html
@@ -1,22 +1,20 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %}
+Flashcard Deck - {{ deck.title }}
+{% endblock %}
 
-<h2>Add a new Deck</h2>
+{% block content %}
+<h2>{{ deck.title }}</h2>
+
+<h2>add a new deck</h2>
 
 <form action="{% url 'add_deck' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <div>
-        <button type="submit">Add new deck</button>
+        <button type="submit">add new deck</button>
     </div>
 </form>
 
 {% endblock %}
-<!-- <form action="{% url 'add_recipe' %}" method='POST'>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div>
-        <button type=submit
-    </div>
-</form> -->
