--- a/templates/decks/view_prompt.html
+++ b/templates/decks/view_prompt.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<a href="{% url 'deck_detail' deck_pk=deck.pk %}">return to {{ deck.deck_name}.</a>
+<a href="{% url 'deck_detail' deck_pk=deck.pk %}">return to {{ deck.deck_name}}.</a>
 
 <h1>answer</h1>
 
-<a href="{% url 'view_prompt' deck_pk=deck.pk %}">return to prompts.</a>
+<a href="{% url 'view_prompt' card_pk=flashcards.pk %}">return to prompt.</a>
 
 {% endblock %}
