add/delete/view functions working; edit card in progress

--- a/templates/decks/view_answer.html
+++ b/templates/decks/view_answer.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
+<br>
+<br>
+<a href="{% url 'deck_detail' deck_pk=flashcard.deck.pk %}">return to {{ flashcard.deck.deck_name }}!</a>
 
-<a href="{% url 'view_prompt' card_pk=flashcard.pk %}">return to {% url 'deck_detail'}.</a>
-
-<h3>answer</h3>
+<h3>answer:</h3>
 <h1>{{ flashcard.answer }}</h1>
 
-<a href="{% url 'view_answer' card_pk=flashcard.pk %}">go to next prompt.</a>
+<a href="{% url 'view_prompt' card_pk=flashcard.pk %}">return to prompt</a>
 
+<br>
 {% endblock %}
+
