--- a/templates/decks/deck_detail.html
+++ b/templates/decks/deck_detail.html
@@ -5,25 +5,36 @@
 
 <h2>{{ deck.deck }}</h2>
 
-<!-- <p>
-    <a href="{% url 'deck_detail' deck_pk=deck.pk %}">{{ deck.deck_list }}</a>
-</p> -->
+ 
 
 <h3>{{ deck.deck_name }}</h3>
 
-<!-- <h3><a href="{% url 'deck_detail' deck_pk=deck.pk %}">{{ flashcard.prompt}}</a></h3> -->
-
+ 
+<div>
 <ol>
     {% for flashcard in deck.flashcards.all %}
     <li>
     <div><a href="{% url 'view_answer' card_pk=flashcard.pk %}">{{ flashcard.prompt }}</a></div>
-    <a class="" href="{% url 'delete_flashcard' card_pk=flashcard.pk %}">delete flashcard</a>
+    
+    <div>
+    <button type="submit"><a class="" href="{% url 'delete_flashcard' card_pk=flashcard.pk %}">delete flashcard</a></button>
+    </div>
+
+    <div>
+        <form action="{% url 'edit_flashcard' card_pk=flashcard.pk %}">
+            <button type="submit">edit flashcard</button>
+        </form>
+    </div>
+    <br>
     </li>
-    {% endfor %};
+    {% endfor %}
 </ol>
+</div>
+
 
 <p><a href="{% url 'add_flashcard' deck_pk=deck.pk %}">add flashcard</a></p>
 
+<div>
 <p class="">
     <a class="" href="{% url 'delete_deck' deck_pk=deck.pk %}">delete deck</a>
 </p>
@@ -35,12 +46,7 @@
         <button type="submit">edit deck</button>
     </div>
 </form>
-
-<!-- <ul>
-    {% for flashcard in deck.flashcards.all %}
-    <li>{{ flashcard.text }}</li>
-    {% endfor %}
-</ul> -->
-
+</div>
+ 
 {% endblock %}
 
