--- a/templates/decks/delete_flashcard.html
+++ b/templates/decks/delete_flashcard.html
@@ -2,14 +2,15 @@
 
 {% block content %}
 
-<form action="{% url 'delete_flashcard' pk=card_pk %}" method="POST">
+<form action="{% url 'delete_flashcard' card_pk=flashcard.pk %}" method="POST">
     {% csrf_token %}
-    <p>are you sure you want to delete {{ flashcard }}?</p>
+    <p>are you sure you want to delete {{ flashcard.prompt }}?</p>
     <p>
         <button class="" type="submit">yes, delete please</button>
-        <a class="" href="{% url 'deck_detail' deck_pk=deck.pk %}">cancel</a>
+        <a class="" href="{% url 'deck_detail' deck_pk=flashcard.deck.pk %}">cancel</a>
     </p>
     
 </form>
 
 {% endblock %}
+
