--- a/templates/decks/view_star.html
+++ b/templates/decks/view_star.html
@@ -6,9 +6,9 @@
 <a href="{% url 'deck_detail' deck_pk=flashcard.deck.pk %}">return to {{ flashcard.deck.deck_name }}!</a>
 
 <h3>answer:</h3>
-<h1 input_type:'checkbox'>{{ flashcard.answer }}</h1>
+<h1>{{ flashcard.star }}</h1>
 
-<a href="{% url 'view_prompt' card_pk=flashcard.pk %}">return to prompt</a>
+<a href="{% url 'view_star' card_pk=flashcard.pk %}">view_star</a>
 
 <br>
 {% endblock %}
