--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body class="sans-serif">
   <div class="mw8 center ph3 pv4">
       <div class="bg-moon-gray">
-       <h1><a class="i" class="black no-underline" href="{% url 'homepage' %}">house of flashcards</a></h1>
+       <h1><a class="blue no-underline" href="{% url 'homepage' %}">quizlet</a></h1>
         {% if user.is_authenticated %}
           <div>
             hello, {{ user.username }}!    
