--- a/templates/decks/deck_detail.html
+++ b/templates/decks/deck_detail.html
@@ -10,24 +10,22 @@
 <h3>{{ deck.deck_name }}</h3>
 
  
+ 
 <div>
 <ol>
     {% for flashcard in deck.flashcards.all %}
     <li>
     <div><a href="{% url 'view_answer' card_pk=flashcard.pk %}">{{ flashcard.prompt }}</a></div>
     
+    <form></form><input type='checkbox'>{{ flashcard.star }}</input></form>
+    
     <div>
     <button type="submit"><a class="" href="{% url 'delete_flashcard' card_pk=flashcard.pk %}">delete flashcard</a></button>
     </div>
 
     <div>
-    <form action="{% url 'edit_flashcard' card_pk=flashcard.pk %}" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div> 
-            <button type="submit">edit flashcard</button>
-        </div>
-    </form>
+    <button type="submit"><a href="{% url 'edit_flashcard' card_pk=flashcard.pk %}">edit flashcard</a>
+    </button>
     </div>
     <br>
     </li>
@@ -43,14 +41,10 @@
     <a class="" href="{% url 'delete_deck' deck_pk=deck.pk %}">delete deck</a>
 </p>
 
-<form action="{% url 'edit_deck' deck_pk=deck.pk %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div>
-        <button type="submit">edit deck</button>
-    </div>
-</form>
-</div>
- 
+<a href="{% url 'edit_deck' deck_pk=deck.pk %}">
+        <button type="submit">edit deck</button></a>
+
+
+
 {% endblock %}
 
