--- a/templates/decks/deck_list.html
+++ b/templates/decks/deck_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <h2>
     <a href="{% url 'add_deck' %}">add a new deck</a>
 </h2>
@@ -22,7 +23,11 @@
     </li> <br>
     {% endfor %}
 </ul>
-    
+ 
+<h2>
+    <a href="{% url 'random_deck' %}">go to random deck</a>
+</h2>
+<br>
 {% endblock %}
  
  
