--- a/templates/decks/edit_deck.html
+++ b/templates/decks/edit_deck.html
@@ -11,6 +11,11 @@
     <div>
         <button type="submit">update deck name</button>
     </div>
+    <div>
+        <button type="submit"><a class="black no-underline" href="{% url 'deck_detail' deck_pk=deck.pk %}">go to 
+            {{ deck.deck_name }}</a>
+        </button>
+    </div>
 </form>
 
 {% endblock %}
